--- a/styles/Track.module.css
+++ b/styles/Track.module.css
@@ -1,5 +1,18 @@
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-150%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.bruh {
+  animation: 1s ease-out 0s 1 slideInLeft;
+}
+
 .bruh:hover {
-  transform: translate(0%, -15%);
-  transition-duration: 0.2s;
+  transform: translate(0%, -15%) scale(1.1);
+  transition-duration: 0.5s;
   cursor: pointer;
 }
